fix overflow of long names on md

--- a/apps/site/assets/css/_schedule-page.scss
+++ b/apps/site/assets/css/_schedule-page.scss
@@ -239,7 +239,7 @@
     @include media-breakpoint-up(md) {
       left: 50%;
       transform: translate(-50%, -50%);
-      width: 400px;
+      width: 500px;
     }
   }
 }
